--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
+    "format": "prettier --write .",
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "lint": "eslint .",
@@ -12,8 +13,7 @@
   "dependencies": {
     "axios": "^1.7.7",
     "react": "18.2.0",
-    "react-native": "0.71.11",
-    "yarn": "^1.22.22"
+    "react-native": "0.71.11"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
